fixing signup spacing

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .screen {		
 	background: linear-gradient(90deg, #5D54A4, #7C78B8);		
 	position: relative;	
-	height: 600px;
+	height: 00px;
 	width: 360px;	
 	box-shadow: 0px 0px 24px #5C5696;
 }
@@ -76,10 +76,10 @@ body {
 }
 
 .screen__background__shape4 {
-	height: 400px;
+	height: 40px;
 	width: 200px;
 	background: #7E7BB9;	
-	top: 420px;
+	top: 20px;
 	right: 50px;	
 	border-radius: 60px;
 }
@@ -87,11 +87,11 @@ body {
 .login {
 	width: 320px;
 	padding: 30px;
-	padding-top: 156px;
+	padding-top: 0px;
 }
 
 .login__field {
-	padding: 20px 0px;	
+	padding: 0px 0px;	
 	position: relative;	
 }
 
@@ -107,6 +107,7 @@ body {
 	background: none;
 	padding: 10px;
 	padding-left: 24px;
+	padding-top: 0px;
 	font-weight: 700;
 	width: 75%;
 	transition: .2s;
@@ -123,7 +124,7 @@ body {
 	background: #fff;
 	font-size: 14px;
 	margin-top: 30px;
-	padding: 16px 20px;
+	padding: 0px 20px;
 	border-radius: 26px;
 	border: 1px solid #D4D3E8;
 	text-transform: uppercase;
@@ -167,7 +168,7 @@ body {
 }
 
 .social-login__icon {
-	padding: 20px 10px;
+	padding: 0px 10px;
 	color: #fff;
 	text-decoration: none;	
 	text-shadow: 0px 0px 8px #7875B5;
